fetch chart data

--- a/index.html
+++ b/index.html
@@ -32,34 +32,34 @@
       <main class="main">
         <h2 class="h2-like">Spending - Last 7 days</h2>
         <ul class="chart">
-          <li class="chart__item">
+          <!-- <li class="chart__item">
             <div class="chart__column"></div>
-            <p class="label">mon</p>
+            <p class="chart__label">mon</p>
           </li>
           <li class="chart__item">
             <div class="chart__column"></div>
-            <p class="label">tue</p>
+            <p class="chart__label">tue</p>
           </li>
           <li class="chart__item">
             <div class="chart__column"></div>
-            <p class="label">wed</p>
+            <p class="chart__label">wed</p>
           </li>
           <li class="chart__item">
             <div class="chart__column"></div>
-            <p class="label">thu</p>
+            <p class="chart__label">thu</p>
           </li>
           <li class="chart__item">
             <div class="chart__column"></div>
-            <p class="label">fri</p>
+            <p class="chart__label">fri</p>
           </li>
           <li class="chart__item">
             <div class="chart__column"></div>
-            <p class="label">sat</p>
+            <p class="chart__label">sat</p>
           </li>
           <li class="chart__item">
             <div class="chart__column"></div>
-            <p class="label">sun</p>
-          </li>
+            <p class="chart__label">sun</p>
+          </li> -->
         </ul>
         <div class="divider"></div>
         <footer class="footer">
@@ -74,5 +74,6 @@
         </footer>
       </main>
     </div>
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
